Closed Bug 1542933 Opened 5 years ago Closed 5 years ago

zoomed in site at first load (about 10 times)

Categories

(Core :: Layout, defect, P3)

67 Branch
Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- fixed
firefox68 --- fixed

People

(Reporter: karlcow, Assigned: botond)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression, Whiteboard: [webcompat])

Attachments

(1 file)

This is originally https://webcompat.com/issues/27978

  1. with Firefox Nightly 68 Android (Fennec)
  2. Go to https://www.pedicure.nl/

See how the website didn't fit in the viewport and looks like it has been blown out about 10 times the initial size.

Looking at the html, there's only link element for the viewport which says

<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">

My pixel 2 is 411 pix but the content seems to be 414px, I wonder if it's the reason it is slightly off. The zoomed in at first load is basically 10 times larger than the actual size.

This is also happening in Fenix.

Flags: webcompat?

Forgot to mention that
The issue is not reproducible on Firefox Realease 65.0.1

I have no idea how bug 1525948 affects this offhand.

Regressed by: 1525948

The regressed by bug 1525948 got fixed in 67 but this bug is reported affecting 66. That's the reason for asking for the regression window here.

Assignee: nobody → botond

(In reply to Hiroyuki Ikezoe (:hiro) from comment #2)

I have no idea how bug 1525948 affects this offhand.

Bug 1525948 introduces a division by the scrollable overflow size. It looks like, on this page, early on during page load the scrollable overflow rect is empty, and we end up dividing by zero and getting an inf, and things go downhill from there.

(In reply to Neha Kochar [:neha] from comment #3)

The regressed by bug 1525948 got fixed in 67 but this bug is reported affecting 66. That's the reason for asking for the regression window here.

I can't reproduce the bug in 66. The original report mentions 67. I think marking 66 as affected was a typo (but please correct me if I'm overlooking something).

Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a4aa09eccb1b
Do not attempt minimum scale computation with empty overflow rect. r=hiro
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Botond, the fix seems minimal and it is a 67 regression, do you think that this could be uplifted to beta?

Flags: needinfo?(botond)

Yes, this is a good candidate for uplift.

Flags: needinfo?(botond)

Comment on attachment 9057392 [details]
Bug 1542933 - Do not attempt minimum scale computation with empty overflow rect. r=hiro

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: Bug 1525948
  • User impact if declined: Some websites load at the maximum (10x) zoom level on mobile. On some pages, due to other pre-existing bugs, the browser can crash due to out-of-memory at this zoom level.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a minimally low risk patch, as it just adds a guard against division by zero.
  • String changes made/needed:
Attachment #9057392 - Flags: approval-mozilla-beta?

Comment on attachment 9057392 [details]
Bug 1542933 - Do not attempt minimum scale computation with empty overflow rect. r=hiro

Uplift approved for 67 beta 12, thanks.

Attachment #9057392 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: