Bug 1542933 - Do not attempt minimum scale computation with empty overflow rect. r=hiro a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D27003